--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ Ik vind je echt een topper, je bent denk ik een inspiratiebron voor mij en vele 
 
 En oja, ik ben altijd in voor een Pilsje als ik in Rotterdam ben!! (Of jij in Utrecht)
       </p>
-      <span>— Tijmen</span>
+      <span>— Tijmen Meijerman</span>
     </div>
 
     <div class="collage">
